--- a/sites/all/themes/ec_default/css/less/feature-fat-footer.less
+++ b/sites/all/themes/ec_default/css/less/feature-fat-footer.less
@@ -17,7 +17,7 @@
       display: block;
       padding: 2px 8px;
       &:hover {
-        .border-radius;
+        .border-radius(5px);
         color: #fff;
         #gradient .vertical(#0085D5, #0075c5);
       }
