--- a/sites/all/themes/ec_default/css/less/feature-splash.less
+++ b/sites/all/themes/ec_default/css/less/feature-splash.less
@@ -41,5 +41,5 @@
 #logo {
   width: 100%;
   height: 113px;
-  background: url('../../images/eu-flag.gif') no-repeat top center;
+  background: url('../images/eu-flag.gif') no-repeat top center;
 }
