--- a/sites/all/themes/ec_default/css/less/quicktab.less
+++ b/sites/all/themes/ec_default/css/less/quicktab.less
@@ -11,12 +11,12 @@ ul.quicktabs-tabs.quicktabs-style-nostyle{
   a {
     text-decoration:none;
     padding:2px 10px 4px;  
-    color: @link_color;
+    color: @linkColor;
     background: none;
     text-shadow: none;
-    &:hover { color: @link_hover_color; background: none; text-shadow: none; }
-    &:focus { color: @link_hover_color; background: none; text-shadow: none; }
-    &:active { color: @link_active_color; background: none; text-shadow: none; }  
-    &:visited { color: @link_color; background: none; text-shadow: none; }
+    &:hover { color: @linkColorHover; background: none; text-shadow: none; }
+    &:focus { color: @linkColorHover; background: none; text-shadow: none; }
+    &:active { color: @linkColorHover; background: none; text-shadow: none; }  
+    &:visited { color: @linkColor; background: none; text-shadow: none; }
   }
 }
