--- a/sites/all/themes/ec_default/css/less/feature-events.less
+++ b/sites/all/themes/ec_default/css/less/feature-events.less
@@ -20,62 +20,62 @@
 .calendar-calendar {
   .month-view .full {
     td.multi-day div.monthview {
-      background-color: @primary_tab_bg_color; 
+      background-color: @navbarLinkBackgroundActive; 
       border: #000 1px solid;
       a { 
-        color: @primary_tab_text_color;
+        color: @white;
         text-shadow: 1px 1px #000000;
       }      
       .cutoff {
-        background-color: @primary_tab_bg_color !important; 
+        background-color: @navbarLinkBackgroundActive !important; 
       }
     }
     td.single-day div.monthview {
       border: #000 1px solid;
       a { 
-        color: @primary_tab_text_color;
+        color: @white;
         text-shadow: 1px 1px #000000;
       }    
       .cutoff {
-        background-color: @primary_tab_bg_color !important; 
+        background-color: @navbarLinkBackgroundActive !important; 
       }
     }
   }
   .week-view .full {
     td.multi-day div.weekview {
-      background-color: @primary_tab_bg_color; 
+      background-color: @navbarLinkBackgroundActive; 
       border: #000 1px solid;
       height: 3.5em !important;
       a { 
-        color: @primary_tab_text_color;
+        color: @white;
         text-shadow: 1px 1px #000000;
       }
       .cutoff {
-        background-color: @primary_tab_bg_color !important; 
+        background-color: @navbarLinkBackgroundActive !important; 
       }      
     }
     td.single-day div.weekview {
-      background-color: @primary_tab_bg_color; 
+      background-color: @navbarLinkBackgroundActive; 
       border: #000 1px solid;
       a { 
-        color: @primary_tab_text_color;
+        color: @white;
         text-shadow: 1px 1px #000000;
       }
       .cutoff {
-        background-color: @primary_tab_bg_color !important; 
+        background-color: @navbarLinkBackgroundActive !important; 
       }      
     }
   }
   .day-view .full {
     div.single-day div.dayview { 
-      background-color: @primary_tab_bg_color; 
+      background-color: @navbarLinkBackgroundActive; 
       border-color: #000;
       a { 
-        color: @primary_tab_text_color;
+        color: @white;
         text-shadow: 1px 1px #000000;
       }
       .cutoff {
-        background-color: @primary_tab_bg_color !important; 
+        background-color: @navbarLinkBackgroundActive !important; 
       }      
     }
   }
@@ -83,6 +83,9 @@
     td table td {
       text-align: center;
     }
+  }
+  td a {
+    font-weight: normal;
   }
 }
 
