--- a/sites/all/themes/ec_default/css/less/feature-news.less
+++ b/sites/all/themes/ec_default/css/less/feature-news.less
@@ -6,8 +6,8 @@
   padding: 10px;
   h2 {
     line-height: 24px;
-    padding: 0;
-    margin: 0;
+    padding-top: 0;
+    margin-top: 0;
   }
   .attachment {
     .view-content:after {
@@ -28,10 +28,11 @@
     }
     > .view-news > .news_content {
       .border-radius(5px 0 0 5px);
-      background-color: @body_color;
+      background-color: @bodyBackground;
       border-left: 1px solid #DDDDDD;
       border-top: 1px solid #DDDDDD;
-      border-bottom: 1px solid #DDDDDD;      
+      border-bottom: 1px solid #DDDDDD;  
+      overflow: hidden;
       div.news { 
         padding-left: 15px;
         padding-right: 15px;
@@ -49,7 +50,19 @@
     padding-left: 0;
     margin-top: 0 !important;
     margin-left: 0 !important;
-    height: 149px;
+    height: 180px;
     background-color: #D9EDF7;
+    float: right;
+    border-bottom: none;
+  }
+  .nav-tabs {
+    > li {
+      float: none;
+    }
+    .active > a,
+    .active > a:hover {
+      border-color: #DDDDDD #DDDDDD #DDDDDD transparent;
+      .border-radius(0 4px 4px 0);
+    }
   }
 }
