--- a/sites/all/themes/ec_default/css/less/menu.less
+++ b/sites/all/themes/ec_default/css/less/menu.less
@@ -48,7 +48,7 @@ a.btn {
   width: 100%;
   height: 36px;
   border: 1px solid #e5e5e5;
-  .border-radius;
+  .border-radius(5px);
   #gradient .vertical(#f5f5f5, #eeeeee);
 }
 .subnav .nav {
