--MULTISITE-100 Fix display problem on user profile

--- a/sites/all/themes/ec_default/css/less/hack-bootstrap.less
+++ b/sites/all/themes/ec_default/css/less/hack-bootstrap.less
@@ -2,6 +2,10 @@
 #header li {
   line-height: 1.4;
 }
+fieldset legend {
+  width: auto;
+  border: none;
+}
 [class^="icon-"] {
   padding-right: 4px;
   margin-top: 1px;
