--MULTISITE-709 Integrate multi-level dropdown

--- a/sites/all/themes/ec_default/bootstrap/less/variables.less
+++ b/sites/all/themes/ec_default/bootstrap/less/variables.less
@@ -106,7 +106,7 @@
 @dropdownDividerTop:            #e5e5e5;
 @dropdownDividerBottom:         @white;
 
-@dropdownLinkColor:             @grayDark;
+@dropdownLinkColor:             @linkColor;
 
 @dropdownLinkColorHover:        @white;
 @dropdownLinkBackgroundHover:   @dropdownLinkBackgroundActive;
