--- a/sites/all/themes/ec_default/css/less/menu.less
+++ b/sites/all/themes/ec_default/css/less/menu.less
@@ -18,6 +18,18 @@
       padding: 0;       
     }    
   }
+  .dropdown-submenu {
+    .dropdown-toggle {
+      color: @linkColor;
+      background-color: @white;
+      &:hover {
+        color: @white;
+      }
+    }
+    &:hover > a {
+      color: @white;
+    }
+  }  
 }
 
 /* --------------- Secondary Menu ------------ */
