--- a/sites/all/themes/ec_default/css/less/style.less
+++ b/sites/all/themes/ec_default/css/less/style.less
@@ -394,6 +394,16 @@ fieldset,
   p {
     margin-bottom: 0;
   }
+  &.collapsed {
+    padding: 0 13px;
+    margin-bottom: 0;
+    border: none;
+    .box-shadow(none);
+    .border-radius(0px);
+    legend {
+      width: 100%;
+    }
+  }
 }
 
 /* Contact Form */
