--- a/sites/all/themes/ec_default/css/less/hack-bootstrap.less
+++ b/sites/all/themes/ec_default/css/less/hack-bootstrap.less
@@ -57,6 +57,12 @@ h5 {
       color: @white;
     }
   }
+  ul.dropdown-menu ul.dropdown-menu {
+    .dropdown-submenu > a:after,
+    ul.dropdown-menu {
+      display: none !important;
+    }
+  }
 }
 
 /* ---------------- Buttons  ----------------- */
