--- a/sites/all/themes/ec_default/css/less/hack-ec.less
+++ b/sites/all/themes/ec_default/css/less/hack-ec.less
@@ -1,9 +1,9 @@
 /* Hack for EC css */
 .title-en {
-  background-image: url("../../images/title/title_en.gif");
+  background-image: url("../images/title/title_en.gif");
 }
 .title {
-  /*background-image: url("../../images/title/title.gif");*/
+  /*background-image: url("../images/title/title.gif");*/
 }
 .layout { 
   background: transparent; 
