--- a/sites/all/themes/ec_default/css/less/hack-europa.less
+++ b/sites/all/themes/ec_default/css/less/hack-europa.less
@@ -1,6 +1,6 @@
 /* Hack for europa css */
 .banner-right {
-  background-image: url("../../wel/template-2011/images/header-background.png");
+  background-image: url("../wel/template-2011/images/header-background.png");
 }
 #path li {
   line-height: 1.6;
