--- a/sites/all/themes/ec_default/css/ec_default.css
+++ b/sites/all/themes/ec_default/css/ec_default.css
@@ -1063,6 +1063,15 @@ ul.quicktabs-tabs.quicktabs-style-nostyle a:visited{color:#0088cc;background:non
 .view-blog .views-row{margin-bottom:15px;}.view-blog .views-row .fivestar-average-stars{margin-top:10px;float:right;}
 .view-blog .views-row .views-field-name img{max-width:50px;max-height:50px;}
 .node-blog-post .submitted .user-picture img{height:auto;max-width:50px;max-height:50px;}
+img.centered{display:block;margin-left:auto;margin-right:auto;}
+img.alignright{padding:4px;margin:0 0 2px 7px;display:inline;}
+img.alignleft{padding:4px;margin:0 7px 2px 0;display:inline;}
+.alignright{float:right;}
+.alignleft{float:left;}
+.aligncenter,div.aligncenter{display:block;margin-left:auto;margin-right:auto;}
+.wp-caption{border:1px solid #ddd;text-align:center;background-color:#f3f3f3;padding-top:4px;margin:10px;-moz-border-radius:3px;-khtml-border-radius:3px;-webkit-border-radius:3px;border-radius:3px;}
+.wp-caption img{margin:0;padding:0;border:0 none;}
+.wp-caption p.wp-caption-text{font-size:11px;line-height:17px;padding:0 4px 5px;margin:0;}
 #header li{line-height:1.4;}
 fieldset legend{width:auto;border:none;}
 [class^="icon-"]{padding-right:4px;margin-top:1px;}
