--- a/sites/all/themes/ec_default/css/less/style.less
+++ b/sites/all/themes/ec_default/css/less/style.less
@@ -470,6 +470,12 @@ html.js input.throbbing {
   padding-bottom: 0;
 }
 
+/* -------------- Rating -------------- */
+.region-content .rate-widget ul {
+  margin: 0;
+  padding: 0;
+}
+
 /* -------------- Other Overrides ------------- */
 
 div.password-suggestions {
