--- a/sites/all/themes/ec_default/bootstrap/less/variables.less
+++ b/sites/all/themes/ec_default/bootstrap/less/variables.less
@@ -131,8 +131,8 @@
 
 // Sprite icons path
 // -------------------------
-@iconSpritePath:          "../bootstrap/img/glyphicons-halflings.png";
-@iconWhiteSpritePath:     "../bootstrap/img/glyphicons-halflings-white.png";
+@iconSpritePath:          "../../ec_default/bootstrap/img/glyphicons-halflings.png";
+@iconWhiteSpritePath:     "../../ec_default/bootstrap/img/glyphicons-halflings-white.png";
 
 
 // Input placeholder text color
