--MULTISITE-323 Allow categorization of feature set

--- a/sites/all/themes/ec_default/css/less/feature-set.less
+++ b/sites/all/themes/ec_default/css/less/feature-set.less
@@ -1,5 +1,15 @@
 /* ---------------- Feature set  ----------------- */
 #feature-set-admin-form {
+	ul {
+		padding-left: 0;
+	}
+	.feature-set-category {
+		cursor: pointer;
+	}
+	.sticky-header,
+	thead {
+		display: none;
+	}
   .feature-set {
     left: 10px;
   }
