--MULTISITE-148 Display name of current user

--- a/sites/all/themes/ec_default/css/less/user.less
+++ b/sites/all/themes/ec_default/css/less/user.less
@@ -16,6 +16,9 @@
 }
 
 /* ---------------- user menu  ----------------- */
+.username {
+  padding: 0 0.5em;
+}
 #block-system-user-menu li a {
   font-size: 0.9em;
 }
