--MULTISITE-1003 Improve display of splash page

--- a/sites/all/themes/ec_default/css/less/feature-splash.less
+++ b/sites/all/themes/ec_default/css/less/feature-splash.less
@@ -1,13 +1,9 @@
 /* ---------------- Splash screen  ----------------- */
-.splash {
-  //#gradient .horizontal(#369, #f1f9fe);
-  //#gradient .vertical-three-colors(#f1f9fe, #58B, 60%, #369);
-  //#gradient .directional(#369, #f1f9fe, 30deg);
-  //#gradient .striped(#369);   
+.page-splash {
   height: 100%;
   #gradient .vertical(#369, #f1f9fe);
   #gradient .radial(#7AD, #369);  
-  > div.row-fluid {
+  div.row-fluid {
     padding-top: 50px;
     h1 {
       color: #F5F5F5;
@@ -18,7 +14,8 @@
       padding-top: 0;
     }
     ul.languages {
-      padding-top: 8px;
+      margin: 0;
+      padding: 8px 15px 19px;
       li {
         list-style: none;
         a {
