--MULTISITE-1012 Rename template

--- a/sites/all/themes/ec_resp/css/less/responsive.less
+++ b/sites/all/themes/ec_resp/css/less/responsive.less
@@ -42,6 +42,8 @@
     position: absolute;
     z-index: 10;
     display: none;
+    border-right: #eee 2px solid;
+    border-bottom: #eee 2px solid;
   }
 
   #layout-body {
