--MULTISITE-1012 Several updates

--- a/sites/all/themes/ec_resp/css/less/style.less
+++ b/sites/all/themes/ec_resp/css/less/style.less
@@ -297,38 +297,6 @@ ul.links {
   border-right: 1px solid #fff4f4;
 }
 
-/* ---------------- grids  ----------------- */
-.grid3 {
-  table {
-    width: 100%;
-    td { 
-      width: 33%; 
-      padding: 10px 15px;
-      vertical-align: top;
-    }
-    th { 
-      width: 33%; 
-      padding: 10px 15px;
-      vertical-align: top;
-    }
-  }
-}
-.grid4 {
-  table {
-    width: 100%;
-    td { 
-      width: 25%; 
-      padding: 10px 15px;
-      vertical-align: top;
-    }
-    th { 
-      width: 25%; 
-      padding: 10px 15px;
-      vertical-align: top;
-    }
-  }
-}
-
 /* -------------- Form Elements   ------------- */
 
 fieldset,
@@ -362,6 +330,13 @@ fieldset,
       }
     }
   }
+}
+
+.form-actions {
+  background-color: transparent;
+  border-top: none;
+  padding: 0;
+  margin: 0;
 }
 
 /* Contact Form */
@@ -421,61 +396,6 @@ html.js input.throbbing {
 .region-content .rate-widget ul {
   margin: 0;
   padding: 0;
-}
-
-/* ---------------- Region top  ----------------- */
-.region-content-top {
-  margin-bottom: 20px;
-}
-
-/* ---------------- Region tools  ----------------- */
-.region-tools {
-  float: right;
-  display: block;
-  text-align: right;
-  margin-top: 15px;
-  padding-left: 15px;
-  padding-right: 15px;
-}
-.region-tools .block {
-  display: inline-block;
-  vertical-align: middle;
-  margin-left: 5px;
-}
-.region-tools .block ul {
-  margin: 0;
-  padding: 0;
-}
-.region-tools .block ul li {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-/* ---------------- Region tools bottom ----------------- */
-.region-tools-bottom {
-  display: block;
-  text-align: right;
-  clear: both;
-}
-.region-tools-bottom .block {
-  display: inline-block;
-  vertical-align: middle;
-  margin-left: 5px;
-}
-.region-tools-bottom .block ul {
-  margin: 0;
-  padding: 0;
-}
-.region-tools-bottom .block ul li {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-/* ---------------- Region left sidebar ----------------- */
-#responsive_sidebar {
-
 }
 
 /* ---------------- User menu  ----------------- */
@@ -580,7 +500,57 @@ div.add-or-remove-shortcuts {
   width: auto;
 }
 
-/* ---------- Footer ----------- */
+/* ---------------- Region top  ----------------- */
+.region-content-top {
+  margin-bottom: 20px;
+}
+
+/* ---------------- Region tools  ----------------- */
+.region-tools {
+  float: right;
+  display: block;
+  text-align: right;
+  margin-top: 15px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+.region-tools .block {
+  display: inline-block;
+  vertical-align: middle;
+  margin-left: 5px;
+}
+.region-tools .block ul {
+  margin: 0;
+  padding: 0;
+}
+.region-tools .block ul li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+/* ---------------- Region tools bottom ----------------- */
+.region-tools-bottom {
+  display: block;
+  text-align: right;
+  clear: both;
+}
+.region-tools-bottom .block {
+  display: inline-block;
+  vertical-align: middle;
+  margin-left: 5px;
+}
+.region-tools-bottom .block ul {
+  margin: 0;
+  padding: 0;
+}
+.region-tools-bottom .block ul li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+/* ---------- Region Footer ----------- */
 #layout-footer {
   border-top: 1px solid #98CEFF;
   text-align: center;
