--- a/sites/all/themes/ec_resp/css/less/responsive.less
+++ b/sites/all/themes/ec_resp/css/less/responsive.less
@@ -30,10 +30,13 @@
     margin-right: 0;
   }
 
-  #sidebar-button {
-    float: left;
+  #menu-button {
     padding-top: 10px;
     padding-bottom: 10px;
+  }
+
+  #sidebar-button {
+    float: left;
   }
 
   #responsive-sidebar > ul {
