--- a/sites/all/themes/ec_resp/css/less/sidebar.less
+++ b/sites/all/themes/ec_resp/css/less/sidebar.less
@@ -1,10 +1,22 @@
 /* ------------------ Sidebar ----------------- */
-.layout-left input[type=text],
-.layout-left input[type=password] {
-  width: 158px;
-}
-.layout-left .item-list ul li,
-.layout-right .item-list ul li  {
-  margin: 0;
-  padding: 0;
+.region-sidebar-first,
+.region-sidebar-second {
+	input, 
+	textarea, 
+	.uneditable-input {
+		width: 90%;
+	}
+	input[type="file"], 
+	input[type="image"], 
+	input[type="submit"], 
+	input[type="reset"], 
+	input[type="button"], 
+	input[type="radio"], 
+	input[type="checkbox"] {
+		width: auto;
+	}
+	input.search-query {
+		padding-left: 6px;
+		padding-right: 6px;
+	}
 }
