--MULTISITE-1215 Update bootstrap to 2.2.2

--- a/sites/all/themes/ec_resp/css/less/responsive.less
+++ b/sites/all/themes/ec_resp/css/less/responsive.less
@@ -39,7 +39,7 @@
     float: left;
   }
 
-  #responsive-sidebar > ul {
+  #responsive-sidebar > div {
     background: #fff;
     height: 100%;
     position: absolute;
