--- a/sites/all/themes/ec_resp/css/less/ec_resp.less
+++ b/sites/all/themes/ec_resp/css/less/ec_resp.less
@@ -6,7 +6,7 @@
  */
  
 /*! 
- * Bootstrap v2.1.1
+ * Bootstrap v2.2.2
  */
 // CSS Reset
 @import "../../bootstrap/less/reset.less";
@@ -52,6 +52,7 @@
 
 // Components: Misc
 @import "../../bootstrap/less/thumbnails.less";
+@import "../../bootstrap/less/media.less";
 @import "../../bootstrap/less/labels-badges.less";
 @import "../../bootstrap/less/progress-bars.less";
 @import "../../bootstrap/less/accordion.less";
@@ -63,13 +64,20 @@
 
 
 /*! 
- * Bootstrap responsive v2.1.1
+ * Bootstrap responsive v2.2.2
  */
+// IE10 Metro responsive
+// Required for Windows 8 Metro split-screen snapping with IE10
+// Source: http://timkadlec.com/2012/10/ie10-snap-mode-and-responsive-design/
+
+@-ms-viewport{
+  width: device-width;
+}
+
 // RESPONSIVE CLASSES
 // ------------------
 
 @import "../../bootstrap/less/responsive-utilities.less";
-
 
 // MEDIA QUERIES
 // ------------------
