--MULTISITE-1215 Update bootstrap to 2.2.2

--- a/sites/all/themes/ec_resp/bootstrap/less/variables.less
+++ b/sites/all/themes/ec_resp/bootstrap/less/variables.less
@@ -153,8 +153,8 @@
 
 // Sprite icons path
 // -------------------------
-@iconSpritePath:          "../img/glyphicons-halflings.png";
-@iconWhiteSpritePath:     "../img/glyphicons-halflings-white.png";
+@iconSpritePath:          "../../ec_resp/bootstrap/img/glyphicons-halflings.png";
+@iconWhiteSpritePath:     "../../ec_resp/bootstrap/img/glyphicons-halflings-white.png";
 
 
 // Input placeholder text color
