--MULTISITE-1039 Rename and rearrange regions

--- a/sites/all/themes/ec_resp/css/less/hack-bootstrap.less
+++ b/sites/all/themes/ec_resp/css/less/hack-bootstrap.less
@@ -156,8 +156,8 @@ h5 {
 .carousel-control {
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 }
-.region-sidebar-first,
-.region-sidebar-second {
+.region-sidebar_left,
+.region-sidebar_right {
   .carousel {
     img {
       max-height: 77px;
@@ -167,8 +167,8 @@ h5 {
 
 /* ---------------- Sidebar  ----------------- */
 /* Force responsive display when block is in sidebar */
-.region-sidebar-first,
-.region-sidebar-second {
+.region-sidebar_left,
+.region-sidebar_right {
   .row-fluid {
     width: 100%;
   }
