--- a/sites/all/themes/ec_resp/css/less/ie.less
+++ b/sites/all/themes/ec_resp/css/less/ie.less
@@ -35,7 +35,7 @@ fieldset legend {
 .meta {
   margin-bottom: 10px;
 }
-.region-header .form-required {
+.region-header_right .form-required {
   color: #eee;
 }
 #search-block-form input.form-submit:hover,
