--- a/sites/all/themes/ec_resp/css/less/sidebar.less
+++ b/sites/all/themes/ec_resp/css/less/sidebar.less
@@ -1,6 +1,6 @@
 /* ------------------ Sidebar ----------------- */
-.region-sidebar-first,
-.region-sidebar-second {
+.region-sidebar_left,
+.region-sidebar_right {
 	input, 
 	textarea, 
 	.uneditable-input {
