--- a/sites/all/themes/ec_resp/css/ie-rtl.css
+++ b/sites/all/themes/ec_resp/css/ie-rtl.css
@@ -15,16 +15,16 @@ ul.action-links li a,
   position: absolute;
   right: 25px;
 }
-.region-header .block,
-.region-header #block-user-login .form-item {
+.region-header_right .block,
+.region-header_right #block-user-login .form-item {
   float: none;
   display: inline;
   vertical-align: top;
 }
-.region-header #block-user-login .item-list li {
+.region-header_right #block-user-login .item-list li {
   float: none;
 }
-.region-header #block-user-login .item-list li.last {
+.region-header_right #block-user-login .item-list li.last {
   padding-right: 0;
 }
 #user-login-form li.openid-link a,
