--- a/sites/all/themes/ec_resp/css/less/style.less
+++ b/sites/all/themes/ec_resp/css/less/style.less
@@ -501,7 +501,7 @@ div.add-or-remove-shortcuts {
 }
 
 /* ---------------- Region top  ----------------- */
-.region-content-top {
+.region-content_top {
   margin-bottom: 20px;
 }
 
@@ -529,22 +529,22 @@ div.add-or-remove-shortcuts {
   padding: 0;
 }
 
-/* ---------------- Region tools bottom ----------------- */
-.region-tools-bottom {
+/* ---------------- Region content bottom ----------------- */
+.region-content_bottom {
   display: block;
   text-align: right;
   clear: both;
 }
-.region-tools-bottom .block {
+.region-content_bottom .block {
   display: inline-block;
   vertical-align: middle;
   margin-left: 5px;
 }
-.region-tools-bottom .block ul {
+.region-content_bottom .block ul {
   margin: 0;
   padding: 0;
 }
-.region-tools-bottom .block ul li {
+.region-content_bottom .block ul li {
   list-style: none;
   margin: 0;
   padding: 0;
