--MULTISITE-1253 Improve theme code quality

--- a/sites/all/themes/ec_resp/css/less/menu.less
+++ b/sites/all/themes/ec_resp/css/less/menu.less
@@ -1,5 +1,6 @@
 /* --------------- Main Menu ------------ */
-#block-system-main-menu {
+#block-system-main-menu-desktop,
+#block-system-main-menu-mobile {
   a {
     text-decoration: none;
     font-size: 110%;
