--- a/sites/all/themes/ec_resp/css/less/feature-splash.less
+++ b/sites/all/themes/ec_resp/css/less/feature-splash.less
@@ -1,13 +1,14 @@
 /* ---------------- Splash screen  ----------------- */
 .page-splash {
   height: 100%;
-  #gradient .vertical(#369, #f1f9fe);
-  #gradient .radial(#7AD, #369);  
+  #gradient .radial(#369, #7AD);  
+  background-repeat: repeat;
   div.row-fluid {
     padding-top: 100px;
     h1 {
       color: #F5F5F5;
       text-shadow: -1px 0 0 rgba(0, 0, 0, 0.15);
+      text-align: center;
     }
     h2#label_language {
       margin-top: 0;
