--MULTISITE-1261 Fix display of newsletter page

--- a/sites/all/themes/ec_resp/css/less/user.less
+++ b/sites/all/themes/ec_resp/css/less/user.less
@@ -9,9 +9,11 @@
     margin-top: 0;
   }
   .field {
-    float: left;
     clear: left;
     padding-bottom: 10px;  
+  }
+  .no_label h3 {
+    display: none;
   }
 }
 
