--- a/sites/all/modules/modified/feature_set/feature-set.css
+++ b/sites/all/modules/modified/feature_set/feature-set.css
@@ -15,6 +15,7 @@
   max-height: 35px;
   max-width: 35px;
   padding: 10px 0;
+  vertical-align: top;
 }
 
 #feature-set-admin-form .feature-set {
@@ -121,6 +122,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
 .pending .cb-disable.selected span { background-position: right -360px; color: #fff; width: 30px; }
 .pending .cb-enable.selected { background-position: 0 -60px; }
 .pending .cb-enable.selected span { background-position: left -210px; color: #fff; width: 30px; }
+
 
 .form-disabled, .form-disabled .cb-enable, .form-disabled .cb-disable { cursor: not-allowed; }
 .form-disabled .cb-disable.selected { background-position: 0 -30px; }
