--- a/sites/all/themes/ec_resp/css/less/feature-set.less
+++ b/sites/all/themes/ec_resp/css/less/feature-set.less
@@ -16,5 +16,8 @@
   .feature-set-image {
     width: 55px;
     text-align: center;
+    height: 50px;
+    line-height: 50px;
+    font-size: 35px;
   }
 }
