--MULTISITE-100 Minor layout improvements

--- a/sites/all/themes/ec_resp/css/less/style.less
+++ b/sites/all/themes/ec_resp/css/less/style.less
@@ -472,6 +472,11 @@ div.add-or-remove-shortcuts {
   padding-top: 0.8em;
 }
 
+/* -------------- Tables -------------- */
+tr.even, tr.odd {
+  background-color: #fefefe;
+}
+
 /* ---------- Overlay layout styles ----------- */
 
 .overlay #main,
