--MULTISITE-1275 Use custom icon fonts for recently added content block

--- a/sites/all/themes/ec_resp/css/less/style.less
+++ b/sites/all/themes/ec_resp/css/less/style.less
@@ -145,6 +145,12 @@ a {
   &:visited { color: @linkColor; }
 }
 
+/* ------------------ Icons Styles ------------------ */
+i[class^="multisite-icon-"] {
+  color: @textColor;
+  padding-right: 3px;
+}
+
 /* ------------------ List Styles ------------------ */
 
 .contextual-links-wrapper {
