--MULTISITE-1281 Improve blog view

--- a/sites/all/themes/ec_resp/css/less/hack-bootstrap.less
+++ b/sites/all/themes/ec_resp/css/less/hack-bootstrap.less
@@ -20,6 +20,9 @@ blockquote {
     line-height: 1.5em;  
   }
 }
+.meta {
+  margin-bottom: 0;
+}
 
 /* ---------------- Heading  ----------------- */
 h1 {
