--- a/sites/all/themes/ec_resp/css/less/style.less
+++ b/sites/all/themes/ec_resp/css/less/style.less
@@ -7,6 +7,7 @@
 .t_upper { text-transform: uppercase; }
 .t_right {text-align: right; }
 .t_left {text-align: left; }
+.t_center {text-align: center; }
 .clickable { cursor: pointer; }
 .off-screen {left: -9999px; position: absolute; top: -9999px; margin: 0; padding: 0;}
 .arrow-up {
