--- a/sites/all/themes/ec_default/css/less/hack-bootstrap.less
+++ b/sites/all/themes/ec_default/css/less/hack-bootstrap.less
@@ -20,6 +20,9 @@ blockquote {
     line-height: 1.5em;  
   }
 }
+.media, .media-body {
+  overflow: hidden;
+}
 
 /* ---------------- Heading  ----------------- */
 h1 {
